fix: 🐛 fix right dropdown alignment

--- a/addons/rose/addon/styles/rose/components/dropdown/_dropdown.scss
+++ b/addons/rose/addon/styles/rose/components/dropdown/_dropdown.scss
@@ -111,6 +111,7 @@ $chevronGrey: url("data:image/svg+xml;utf-8,<svg viewBox='0 0 24 24' fill='%2362
   }
 
   &.rose-dropdown-right {
+    vertical-align: middle;
     .rose-dropdown-content {
       right: 0;
     }
